[metadata]
name = cx5-bench
summary = Benchmark for CloudX5
description-file =
    README.md
author = niusmallnan
author-email = niusmallnan@gmail.com
classifier =
    Environment :: Justep
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[files]
packages =
   cx5bench

[entry_points]
console_scripts =
    cx5bench = cx5bench.cli:cli
